[gd_scene load_steps=6 format=2]

[ext_resource path="res://material/outline.tres" type="Material" id=1]
[ext_resource path="res://test/block/BuildingBlock.gd" type="Script" id=2]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.89

[sub_resource type="BoxShape" id=2]
resource_local_to_scene = true

[sub_resource type="CubeMesh" id=3]
resource_local_to_scene = true
material = ExtResource( 1 )
size = Vector3( 2.2, 2.2, 2.2 )

[node name="BuildingBlock" type="RigidBody"]
collision_layer = 5
mass = 100.0
physics_material_override = SubResource( 1 )
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 2 )

[node name="Outline" type="MeshInstance" parent="."]
visible = false
mesh = SubResource( 3 )
material/0 = null

[connection signal="input_event" from="." to="." method="_on_Block_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_Block_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Block_mouse_exited"]
